added PQ project, research focus

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,12 +10,17 @@
       <div class="wrapper">
         <div class="grid-display">
           <div class="row">
-                <div class="col-12 intro">I'm Matti Hicks,
-                a UX researcher / designer currently helping students discover the world.
+                <div class="col-12 intro">I'm Matti Hicks, a UX researcher and designer fascinated by making tech more thoughtful at scale
               </div>
           </div>
 
-    <div class="row">
+                  <div class="grid-display">
+          <div class="row">
+                <div class="col-12"><h2 class="sectionTitle researchWork">Research work</h2>
+              </div>
+          </div></div>
+
+    <div class="row interests">
       <div class="col-6">
         <div class="projectGrid">
           <a href="/customer-journey"><img src="assets/images/ef-customerJourney.jpg" alt="customer journey image"></a>
@@ -24,37 +29,37 @@
       <div class="col-6">
         <div class="projectGrid">
         <h4>Customer journey mapping in Spain and Finland</h4>
-        <p>UX Researcher, tracing the customer and sales journey to drive product innovation</p>
+        <p>Tracing the customer and sales journey to drive product innovation</p>
         <p>Read about <a href="/customer-journey">this work</a></p>
         </div>
     </div>
   </div>
 
-    <div class="row">
+      <div class="row">
       <div class="col-6">
         <div class="projectGrid">
-          <a href="/education-first"><img src="assets/images/ef_thumb.jpg" alt="novartis image"></a>
+          <a href="/price-quote"><img src="assets/images/PQ_thumb.jpg" alt="price quote image"></a>
         </div>
       </div>
       <div class="col-6">
         <div class="projectGrid">
-        <h4>Digital transformation for EF Finland</h4>
-        <p>UX Designer and Researcher, facilitating the end to end customer experience with a new digital model</p>
-        <p>Read about <a href="/education-first">this work</a></p>
+        <h4>"I want the exact price!"</h4>
+        <p>Applying thick data to understand the quantitative success of a price quote CTA for feature development</p>
+        <p>Read about <a href="/price-quote">this work</a></p>
         </div>
     </div>
   </div>
 
-  <div class="row">
+    <div class="row">
     <div class="col-6">
       <div class="projectGrid"> 
-        <a href="/novartis"><img src="assets/images/thumb_novartis2.jpg" alt="novartis image"></a>
+        <a href="/novartis"><img src="assets/images/novartis_collaboration_thumb.jpg" alt="novartis image"></a>
       </div>
     </div>
     <div class="col-6">
       <div class="projectGrid">
-       <h4>Designing for cancer research</h4>
-        <p>Senior UX Designer, working to research and design better social and collaboration technologies</p>
+       <h4>Collaboration among oncology scientists</h4>
+        <p>Researching how scientists work to increase collaboration among them</p>
         <p>Read about <a href="/novartis">this work</a></p>
       </div>
     </div>
@@ -70,9 +75,30 @@
     <div class="col-6">
       <div class="projectGrid">
        <h4>Portable Ultrasound for Village Midwives</h4>
-          <p>UX Designer, researching and designing a low cost medical device to save lives</p>
+          <p>Researching and designing a low cost medical device in rural Uganda</p>
           <p>Read about <a href="/ultrasound">this work</a></p>
       </div>
+    </div>
+  </div>
+
+                    <div class="grid-display">
+          <div class="row">
+                <div class="col-12"><h2 class="sectionTitle designWork">Design work</h2>
+              </div>
+          </div></div>
+
+    <div class="row interests">
+      <div class="col-6">
+        <div class="projectGrid">
+          <a href="/education-first"><img src="assets/images/ef_thumb.jpg" alt="novartis image"></a>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="projectGrid">
+        <h4>Digital transformation for EF Finland</h4>
+        <p>UX Designer and Researcher, facilitating the end to end customer experience with a new digital model</p>
+        <p>Read about <a href="/education-first">this work</a></p>
+        </div>
     </div>
   </div>
 
@@ -95,16 +121,79 @@
 
     </div>
 
-
-
   </div>
 </div>
 
-  <div class="page-content-alternative">
+
+<div class="page-content-alternative">
     <div class="wrapper">
+    <div class="grid-display">
+    <div class="row interests">
+    <h2 class="sectionTitle publications">Selected publications</h2>
+    </div>
+  </div>
+
+
       <div class="grid-display">
-        <div class="row">
+        <div class="row interests">
+          <div class="col-4">
+            <a href="https://uxdesign.cc/design-that-nurtures-the-human-experience-63f2025546cf">
+            <div class="publicationCard">
+              
+                <img src="assets/images/nutureExperience_post.jpeg" alt="nuture experience post image"/>
+                <div class="publicationTitle">
+                <h5>2018</h5>
+                  <h4>Design that nurtures the human experience</h4>
+
+          </div>
+        </div></a>
+      </div>
+          
+          <div class="col-4">
+            <a href="https://medium.com/@mattihicks/parachuting-into-unfamiliar-research-territory-82045800bdb6" >
+            <div class="publicationCard">
+                <img src="assets/images/parachuting_post.jpeg" alt="research territory blog post image"/>
+                   <div class="publicationTitle">
+                <h5>2018</h5>
+                  <h4>Parachuting into unfamiliar research territory</h4>
+</div>
+            </div>
+          </a>
+
+          </div>
+            
+          <div class="col-4">
+            <a href="assets/papers/UltrasoundAssistantIUI4DR.pdf">
+            <div class="publicationCard">
+   <img src="assets/images/ultrasound_paper.jpg" alt="ultrasound paper image"/>
+                   <div class="publicationTitle">
+                <h5>2011</h5>
+                  <h4>Designing an Intelligent Medical Assistant... [pdf]</h4>
+          </div>
+          
+</div></a>
+  </div>
+  </div>
+</div>
+</div>
+
+
+  
+
+    <div class="wrapper">
+
+                       <div class="grid-display">
+          <div class="row">
+                <div class="col-12"><h2 class="sectionTitle aboutMe">About Matti
+
+              </h2>
+              </div>
+          </div></div>
+      <div class="grid-display">
+        <div class="row interests">
           <div class="col-6 aboutPic">
+
+
             <img src="assets/images/matthewPic.jpg" alt="matthew pic">
           </div>
           <div class="col-6 about">
@@ -132,7 +221,7 @@
             <ul>
               <li>Sketch</li>
               <li>Framer/HTML-CSS</li>
-              <li>Adobe Suite</li>
+              <li>Ethnio</li>
               <li>Spotify</li>
             </ul>
             </div>
@@ -141,7 +230,7 @@
             <h4>And for fun I...</h4>
             <ul>
               <li>Listen to <a href="https://www.mixed-methods.org/">Mixed Methods</a></li>
-              <li>Develop side projects</li>
+              <li>Coding (like this site)</li>
               <li><a href="https://medium.com/@mattihicks">Write</a></li>
               <li>Learn Hebrew, German</li>
             </ul>
@@ -151,6 +240,7 @@
   </div>
 </div>
 </div>
+
 
 
 <!--   {{ content }} -->
