--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -24,17 +24,22 @@
 
 <div class="grid-display">
   <div class="row projectBody projectNav">
+
   <div class="col-2">
     <a href="/customer-journey"><img src="../assets/images/ef_journey.png" alt="journey navigation link"></a>
   </div>
-   <div class="col-2">
-    <a href="/education-first"><img src="../assets/images/EF_finland_nav_item.png" alt="ef navigation link"></a>
+    <div class="col-2">
+    <a href="/price-quote"><img src="../assets/images/priceQuote_nav_item.png" alt="price navigation link"></a>
   </div>
+
   <div class="col-2">
     <a href="/novartis"><img src="../assets/images/NOVARTIS-2.png" alt="novartis navigation link"></a>
   </div>
   <div class="col-2">
     <a href="/ultrasound"><img src="../assets/images/ultrasound-2.png" alt="ultrasound navigation link"></a>
+  </div>
+     <div class="col-2">
+    <a href="/education-first"><img src="../assets/images/EF_finland_nav_item.png" alt="ef navigation link"></a>
   </div>
   <div class="col-2">
     <a href="/dogstay"><img src="../assets/images/dogStay-2.png" alt="dogstay navigation link"></a>
