--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -322,16 +322,42 @@ p img .full-image {
     font-family: $header-page-links-font-family;
 }
 
-.projectNav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 .projectNav .col-2 {
     text-align:center;
 }
 
+.videoDaniel {
+    text-align: center;
+}
 
+.publicationCard {
+    width: 100%;
+    height: 100%;
+    min-height: 310px;
+    background-color: white;
+    border: 1px solid #F7F7F7;
+    margin-right: 32px;
+    box-shadow: 0px 10px 60px 0px rgba(0, 0, 0, 0.06);
+    transition: transform 0.5s ease-out, box-shadow 0.5s ease-out;
+}
 
+.publicationTitle {
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-top: 8px;
 
+}
+
+.publicationTitle h5 {
+    margin-bottom: 0px;
+}
+
+a .publicationCard, .publicationCard:visited {
+    color: #161616;
+}
+
+.publicationCard:hover {
+    box-shadow: 0px 10px 60px 0px rgba(0, 0, 0, 0.20);
+
+}
