--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: 690px) {
 .intro {
-	font-size: 7vw;
+	font-size: 32px;
 }
 
 .site-header {
@@ -46,4 +46,9 @@ html .page-content-alternative {
 .projectNav .col-2 {
     text-align:center;
 }
+
+.publicationCard {
+    margin-bottom: 32px;
+}
+
 }
