layout fix, user research post

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -125,16 +125,18 @@
 </div>
 
 
-<div class="page-content-alternative">
+<div class="page-content">
     <div class="wrapper">
-    <div class="grid-display">
-    <div class="row interests">
-    <h2 class="sectionTitle publications">Selected publications</h2>
-    </div>
-  </div>
+
+                        <div class="grid-display">
+          <div class="row">
+                <div class="col-12"><h2 class="sectionTitle publications">Selected publications</h2>
+              </div>
+          </div></div>
 
 
-      <div class="grid-display">
+
+  
         <div class="row interests">
           <div class="col-4">
             <a href="https://uxdesign.cc/design-that-nurtures-the-human-experience-63f2025546cf">
@@ -150,12 +152,12 @@
       </div>
           
           <div class="col-4">
-            <a href="https://medium.com/@mattihicks/parachuting-into-unfamiliar-research-territory-82045800bdb6" >
+            <a href="https://uxdesign.cc/user-research-makes-you-a-better-human-baafe1475877" >
             <div class="publicationCard">
-                <img src="assets/images/parachuting_post.jpeg" alt="research territory blog post image"/>
+                <img src="assets/images/post_userResearch.jpeg" alt="user research better human blog post image"/>
                    <div class="publicationTitle">
                 <h5>2018</h5>
-                  <h4>Parachuting into unfamiliar research territory</h4>
+                  <h4>User research makes you a better human</h4>
 </div>
             </div>
           </a>
@@ -168,7 +170,7 @@
    <img src="assets/images/ultrasound_paper.jpg" alt="ultrasound paper image"/>
                    <div class="publicationTitle">
                 <h5>2011</h5>
-                  <h4>Designing an Intelligent Medical Assistant... [pdf]</h4>
+                  <h4>Designing an Intelligent Medical Assistant [pdf]</h4>
           </div>
           
 </div></a>
@@ -176,20 +178,20 @@
   </div>
 </div>
 </div>
+</div>
 
-
+<div class="page-content-alternative">
   
 
     <div class="wrapper">
 
                        <div class="grid-display">
-          <div class="row">
+          <div class="row interests">
                 <div class="col-12"><h2 class="sectionTitle aboutMe">About Matti
 
               </h2>
-              </div>
+         
           </div></div>
-      <div class="grid-display">
         <div class="row interests">
           <div class="col-6 aboutPic">
 
@@ -199,7 +201,8 @@
           <div class="col-6 about">
             <p>I grew up in Kansas City, Missouri, raised by two hardworking parents who reluctantly let me study abroad in Germany when I was 17. After graduating high school I moved to Seattle and worked in cafes until I could afford college.</p>
             <p>In college I won scholarships that enabled me to develop strong passions for art, digital design, research, and writing. I also studied in Italy, interned in Holland, and conducted fieldwork in Uganda.</p>
-            <p>Less than a month after graduating college I moved to Switzerland where I've been living for the past five years.</p>
+            <p>Less than a month after graduating college I moved to Switzerland where I've been living for the past six years.</p>
+            <p>Not yet a yodeler, not yet an alphorn player. But loving it here.🇨🇭☺️</p>
           </div>
         </div>
       </div>
@@ -207,22 +210,22 @@
       <div class="grid-display">
         <div class="row interests">
           <div class="col-4">
-            <h4>I read...</h4>
+            <h4>I look up to...</h4>
             <ul>
-              <li><a href="https://www.offscreenmag.com/">Offscreen magazine</a></li>
-              <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
-              <li><a href="https://www.highresolution.design/">High Resolution</a></li>
-              <li><a href="http://sethgodin.typepad.com/">Seth Godin﻿</a></li>
+              <li><a href="https://www.triciawang.com/">Tricia Wang</a></li>
+              <li><a href="http://elizabethchurchill.com/">Elizabeth Churchill</a></li>
+              <li><a href="http://www.danah.org/">dana boyd</a></li>
+              <li><a href="https://www.swiss-miss.com/">SwissMiss</a></li>
             </ul>
           </div>
           
           <div class="col-4">
             <h4>I work with...</h4>
             <ul>
+              <li>Ethnio</li>
+              <li>Airtable</li>
               <li>Sketch</li>
               <li>Framer/HTML-CSS</li>
-              <li>Ethnio</li>
-              <li>Spotify</li>
             </ul>
             </div>
             
@@ -230,9 +233,9 @@
             <h4>And for fun I...</h4>
             <ul>
               <li>Listen to <a href="https://www.mixed-methods.org/">Mixed Methods</a></li>
-              <li>Coding (like this site)</li>
+              <li>Code this site</li>
               <li><a href="https://medium.com/@mattihicks">Write</a></li>
-              <li>Learn Hebrew, German</li>
+              <li>Read books (auf Deutsch)</li>
             </ul>
           </div>
           
