--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -330,7 +330,6 @@ p img .full-image {
 .publicationCard {
     width: 100%;
     height: 100%;
-    min-height: 310px;
     background-color: white;
     border: 1px solid #F7F7F7;
     margin-right: 32px;
@@ -347,6 +346,10 @@ p img .full-image {
 
 .publicationTitle h5 {
     margin-bottom: 0px;
+}
+
+.publicationTitle h4 {
+    line-height: 1.5;
 }
 
 a .publicationCard, .publicationCard:visited {
