--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="https://www.mattihicks.com" />
   <meta property="og:title" content="Matti Hicks - Portfolio" />
   <meta property="og:image" content="https://mattihicks.com/assets/images/mattiSmall.jpg">
-  <meta property="og:description" content="Portfolio site for Matti Hicks, product designer and researcher." />
+  <meta property="og:description" content="Portfolio site for Matti Hicks, UX researcher and UX designer." />
 
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
@@ -20,9 +20,9 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
- <!-- <link rel="icon" type="assets/images/favicon-32x32.png">
+ <link rel="icon" type="assets/images/favicon-32x32.png">
 <link rel="icon" type="assets/images/favicon-96x96.png">
 <link rel="icon" type="assets/images/favicon-16x16.png">
-<link rel="icon" type="assets/images/favicon.png"> -->
+<link rel="icon" type="assets/images/favicon.png">
 
 </head>
