--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
       <div class="wrapper">
         <div class="grid-display">
           <div class="row">
-                <div class="col-12 intro">I'm Matti Hicks, a UX researcher and designer fascinated by making tech more thoughtful at scale
+                <div class="col-12 intro">I'm Matti Hicks, a UX researcher & designer fascinated by making tech more thoughtful at scale
               </div>
           </div>
 
