PQ text make simple

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@
       <div class="col-6">
         <div class="projectGrid">
         <h4>"I want the exact price!"</h4>
-        <p>Applying thick data to understand the quantitative success of a price quote CTA for feature development</p>
+        <p>Applying thick data to understand the quantitative success of a CTA</p>
         <p>Read about <a href="/price-quote">this work</a></p>
         </div>
     </div>
