ultrasound output added, nav links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -96,7 +96,7 @@
       <div class="col-6">
         <div class="projectGrid">
         <h4>Digital transformation for EF Finland</h4>
-        <p>UX Designer and Researcher, facilitating the end to end customer experience with a new digital model</p>
+        <p>Designing an end to end customer experience with a new digital model</p>
         <p>Read about <a href="/education-first">this work</a></p>
         </div>
     </div>
@@ -132,7 +132,7 @@
           <div class="row">
                 <div class="col-12"><h2 class="sectionTitle publications">Selected publications</h2>
               </div>
-          </div></div>
+          </div>
 
 
 
@@ -176,6 +176,11 @@
 </div></a>
   </div>
   </div>
+
+            <div class="row interests">
+                <div class="col-12"><p>For more writing, please check out <a href="https://medium.com/@mattihicks">Medium</a> or my <a href="/ultrasound">academic work</a></p>
+              </div>
+          </div>
 </div>
 </div>
 </div>
