portfolio improvements, research focus

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
       <div class="wrapper">
         <div class="grid-display">
           <div class="row">
-                <div class="col-12 intro">I'm Matti Hicks, a UX researcher & designer fascinated by making tech more thoughtful at scale
+                <div class="col-12 intro">I'm Matti Hicks, a UX researcher with a strong (💪🏼) design background
               </div>
           </div>
 
@@ -28,8 +28,8 @@
       </div>
       <div class="col-6">
         <div class="projectGrid">
-        <h4>Customer journey mapping in Spain and Finland</h4>
-        <p>Tracing the customer and sales journey to drive product innovation</p>
+        <h4>International research</h4>
+        <p>Identifying customer journeys to revamp EF Language products</p>
         <p>Read about <a href="/customer-journey">this work</a></p>
         </div>
     </div>
@@ -43,8 +43,8 @@
       </div>
       <div class="col-6">
         <div class="projectGrid">
-        <h4>"I want the exact price!"</h4>
-        <p>Applying thick data to understand the quantitative success of a CTA</p>
+        <h4>Surveys and diving deep with interviews for a pricing CTA</h4>
+        <p>Applying thick data to understand quantitative success </p>
         <p>Read about <a href="/price-quote">this work</a></p>
         </div>
     </div>
@@ -58,8 +58,8 @@
     </div>
     <div class="col-6">
       <div class="projectGrid">
-       <h4>Collaboration among oncology scientists</h4>
-        <p>Researching how scientists work to increase collaboration among them</p>
+       <h4>Site visits at Novartis</h4>
+        <p>Research with Novartis scientists to see how they can collaborate better</p>
         <p>Read about <a href="/novartis">this work</a></p>
       </div>
     </div>
@@ -75,7 +75,7 @@
     <div class="col-6">
       <div class="projectGrid">
        <h4>Portable Ultrasound for Village Midwives</h4>
-          <p>Researching and designing a low cost medical device in rural Uganda</p>
+          <p>Field study research for a low cost medical device in rural Uganda</p>
           <p>Read about <a href="/ultrasound">this work</a></p>
       </div>
     </div>
