--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,8 +58,8 @@
     </div>
     <div class="col-6">
       <div class="projectGrid">
-       <h4>Site visits at Novartis</h4>
-        <p>Research with Novartis scientists to see how they can collaborate better</p>
+       <h4>Contextual inquiries at Novartis</h4>
+        <p>Working with research oncologists to enable better collaboration</p>
         <p>Read about <a href="/novartis">this work</a></p>
       </div>
     </div>
@@ -96,7 +96,7 @@
       <div class="col-6">
         <div class="projectGrid">
         <h4>Digital transformation for EF Finland</h4>
-        <p>Designing an end to end customer experience with a new digital model</p>
+        <p>Researching and designing for a revamped end to end customer experience</p>
         <p>Read about <a href="/education-first">this work</a></p>
         </div>
     </div>
