--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         </ul>
 
         <ul class="social-media">
-        	<li><a href="https://dribbble.com/matti">Dribbble</a></li>
+        	<li><a href="https://medium.com/@mattihicks">Medium</a></li>
         	<li><a href="https://twitter.com/mattihicks">Twitter</a></li>
         	<li><a href="https://www.linkedin.com/in/mattihicks/">LinkedIn</a></li>
         </ul>
