--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@
       </div>
       <div class="col-6">
         <div class="projectGrid">
-        <h4>Surveys and interviews for a pricing CTA</h4>
+        <h4>Surveys and 1:1 interviews for a pricing CTA</h4>
         <p>Applying thick data to understand quantitative success </p>
         <p>Read <a href="/price-quote">case study #2</a></p>
         </div>
