--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
         <div class="projectGrid">
         <h4>International research</h4>
         <p>Identifying customer journeys to revamp EF Language products</p>
-        <p>Read <a href="/customer-journey">case study #1</a></p>
+        <p>Read about <a href="/customer-journey">work #1</a></p>
         </div>
     </div>
   </div>
@@ -45,7 +45,7 @@
         <div class="projectGrid">
         <h4>Surveys and 1:1 interviews for a pricing CTA</h4>
         <p>Applying thick data to understand quantitative success </p>
-        <p>Read <a href="/price-quote">case study #2</a></p>
+        <p>Read about <a href="/price-quote">work #2</a></p>
         </div>
     </div>
   </div>
@@ -60,7 +60,7 @@
       <div class="projectGrid">
        <h4>Contextual inquiries at Novartis</h4>
         <p>Working with research oncologists to enable better collaboration</p>
-        <p>Read <a href="/novartis">case study #3</a></p>
+        <p>Read about <a href="/novartis">work #3</a></p>
       </div>
     </div>
   </div>
@@ -76,7 +76,7 @@
       <div class="projectGrid">
        <h4>Portable Ultrasound for Village Midwives</h4>
           <p>Field study research for a low cost medical device in rural Uganda</p>
-          <p>Read <a href="/ultrasound">case study #4</a></p>
+          <p>Read about <a href="/ultrasound">work #4</a></p>
       </div>
     </div>
   </div>
@@ -97,7 +97,7 @@
         <div class="projectGrid">
         <h4>Digital transformation for EF Finland</h4>
         <p>Researching and designing for a revamped end to end customer experience</p>
-        <p>Read <a href="/education-first">case study #5</a></p>
+        <p>Read about <a href="/education-first">work #5</a></p>
         </div>
     </div>
   </div>
@@ -113,7 +113,7 @@
       <div class="projectGrid">
        <h4>DogStay: a tailored dog boarding experience</h4>
         <p>A self-initiated project - based on my love for dogs 🐶</p>
-        <p>Read <a href="/dogstay">case study #6</a></p>
+        <p>Read about <a href="/dogstay">work #6</a></p>
       </div>
     </div>
   </div>
