--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -208,6 +208,8 @@
             <p>In college I won scholarships that enabled me to develop strong passions for art, digital design, research, and writing. I also studied in Italy, interned in Holland, and conducted fieldwork in Uganda.</p>
             <p>Less than a month after graduating college I moved to Switzerland where I've been living for the past six years.</p>
             <p>Not yet a yodeler, not yet an alphorn player. But loving it here.🇨🇭☺️</p>
+        
+            <p>View my <a href="../assets/papers/mhicksCV.pdf">CV (pdf)</a></p>
           </div>
         </div>
       </div>
