--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         </svg>
       </a> -->
 
-      <div class="trigger">
+<!--       <div class="trigger">
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ site.baseurl }}/">Home</a>
@@ -28,7 +28,7 @@
           {% endif %}
         {% endfor %}
 
-      </div>
+      </div> -->
 
 
 
