--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,25 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html>
 
-<article class="post">
+{% include head.html %}
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+<body>
 
-</article>
+
+
+  {% include header.html %}
+
+
+  <div class="page-content intro-project">
+
+    <div class="wrapper">
+     <div class="page-title">{{ page.title }}</div>
+
+</div>
+</div>
+
+  {{ content }}
+
+</body>
+
+</html>
