added intro paragraph

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,8 +14,15 @@
               </div>
           </div>
 
-                  <div class="grid-display">
           <div class="row">
+                <div class="col-8 introPara"><p>Based in Zürich, I am currently leading research for a global education company. Prior to that, I conducted research with oncology scientists in Basel, midwives in Uganda, and scholars in Holland.</p>
+                  <p>For more info, check out my <a href="../assets/papers/mhicksCV.pdf">CV (pdf)</a></p>
+                  <div class="col-2"></div>
+              </div>
+          </div>
+
+          <div class="grid-display">
+          <div class="row interests">
                 <div class="col-12"><h2 class="sectionTitle researchWork">Research work</h2>
               </div>
           </div></div>
@@ -96,7 +103,7 @@
       <div class="col-6">
         <div class="projectGrid">
         <h4>Digital transformation for EF Finland</h4>
-        <p>Researching and designing for a revamped end to end customer experience</p>
+        <p>Researching and designing for a new end to end customer experience</p>
         <p>Read about <a href="/education-first">work #5</a></p>
         </div>
     </div>
@@ -208,8 +215,6 @@
             <p>In college I won scholarships that enabled me to develop strong passions for art, digital design, research, and writing. I also studied in Italy, interned in Holland, and conducted fieldwork in Uganda.</p>
             <p>Less than a month after graduating college I moved to Switzerland where I've been living for the past six years.</p>
             <p>Not yet a yodeler, not yet an alphorn player. But loving it here.🇨🇭☺️</p>
-        
-            <p>View my <a href="../assets/papers/mhicksCV.pdf">CV (pdf)</a></p>
           </div>
         </div>
       </div>
