--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -359,3 +359,75 @@ a .publicationCard, .publicationCard:visited {
 .publicationCard:hover {
     box-shadow: 0px 10px 60px 0px rgba(0, 0, 0, 0.20);
 }
+ 
+
+.timeline {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-bottom: 5px
+}
+
+.timeline>li {
+    margin: 0;
+    position: relative;
+    list-style-type: none;
+    margin-bottom: -10px;
+    display: block;
+    width: 100%
+}
+
+.timelineDate {
+    width: 100px;
+    float: left;
+    margin-left: -38px;
+    padding: 15px 20px 4px 0;
+    text-align: right;
+}
+
+.timelineContent {
+    border-left: 2px #161616 solid;
+    padding-left: 20px;
+    word-wrap: break-word;
+    display: block;
+    padding: 20px 20px 0 20px;
+    float: left;
+    width: 80%;
+    font-size: 18px;
+
+}
+
+.timelineContent:before {
+    position: absolute;
+    content: '';
+    width: 8px;
+    height: 8px;
+    border: 2px solid #161616;
+    background: #f1eeec;
+    left: 77px;
+    top: 24px;
+    border-radius: 100%
+}
+
+.timelineContent p {
+    margin: 0;
+    padding: 0 0 10px 0;
+}
+
+.timelineContent p a {
+    font-style: italic;
+    color: inherit;
+    text-decoration: none
+}
+
+.timelineContent p a:hover {
+    text-decoration: underline
+}
+
+.introPara {
+    font-family: $font-name;
+    font-size: 20px;
+
+}
+
+
