--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -55,4 +55,66 @@ html .page-content-alternative {
     margin-bottom: 0px;
 }
 
+ /* Place the timelime to the left */
+  .timelineContent:before {
+    position: absolute;
+    content: '';
+    width: 8px;
+    height: 8px;
+    border: 2px solid #ccc;
+    background: #fff;
+    left: 65px;
+    top: 24px;
+    border-radius: 100%;
+}
+
+.timelineDate {
+    width: 50px;
+    margin: 14px 0 0 0;
+    float: left;
+    padding: 5px 20px 4px 0;
+    text-align: right;
+}
+}
+
+
+@media only screen and (max-width: 720px) {
+
+ .timeline {
+        margin: 0;
+        padding: 0
+    }
+
+    .timeline-date {
+        width: 50px;
+        margin: 14px 0 0 0;
+        float: left;
+        padding: 5px 20px 4px 0;
+        text-align: right;
+        font-family: synebold
+    }
+
+    .timelineContent {
+        border-left: 2px #ccc solid;
+        padding-left: 20px;
+        float: none;
+        margin-left: 70px;
+        width: auto
+    }
+
+    .timelineContent:before {
+        position: absolute;
+        content: '';
+        width: 8px;
+        height: 8px;
+        border: 2px solid #ccc;
+        background: #fff;
+        left: 65px;
+        top: 24px;
+        border-radius: 100%
+    }
+
+    .introPara {
+        font-size: 17px;
+    }
 }
