--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
 
           <div class="row">
                 <div class="col-8 introPara"><p>Based in Zürich, I am currently leading research for a global education company. Prior to this, I conducted research with oncology scientists in Basel, midwives in Kampala, and scholars in Rotterdam.</p>
-                  <p>For more info, check out my <a href="../assets/papers/mhicksCV.pdf">CV (pdf)</a></p>
+                  <p>View my <a href="../assets/papers/mhicksCV.pdf">CV (pdf)</a></p>
                   <div class="col-2"></div>
               </div>
           </div>
