--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,8 +15,8 @@
           </div>
 
           <div class="row">
-                <div class="col-8 introPara"><p>Based in Zürich, I am currently leading research for a global education company. Prior to this, I conducted research with oncology scientists in Basel, midwives in Kampala, and scholars in Rotterdam.</p>
-                  <p>View my <a href="../assets/papers/mhicksCV.pdf">CV (pdf)</a></p>
+                <div class="col-8 introPara"><p>Based in Zürich, I am currently leading research for a global education company. Prior to this, I've worked in research areas such as social technologies, health and medical, and engineering.</p>
+                  <p>Explore my portfolio or <a href="../assets/papers/mhicksCV.pdf">view my CV (pdf)</a></p>
                   <div class="col-2"></div>
               </div>
           </div>
