--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,14 +30,14 @@
     <div class="row interests">
       <div class="col-6">
         <div class="projectGrid">
-          <a href="/customer-journey"><img src="assets/images/ef-customerJourney.jpg" alt="customer journey image"></a>
+          <a href="/international-research"><img src="assets/images/ef-customerJourney.jpg" alt="customer journey image"></a>
         </div>
       </div>
       <div class="col-6">
         <div class="projectGrid">
         <h4>International research</h4>
         <p>Identifying customer journeys to revamp EF Language products</p>
-        <p>Read about <a href="/customer-journey">work #1</a></p>
+        <p>Read about <a href="/international-research">work #1</a></p>
         </div>
     </div>
   </div>
@@ -60,14 +60,14 @@
     <div class="row">
     <div class="col-6">
       <div class="projectGrid"> 
-        <a href="/novartis"><img src="assets/images/novartis_collaboration_thumb.jpg" alt="novartis image"></a>
+        <a href="/novartis-work"><img src="assets/images/novartis_collaboration_thumb.jpg" alt="novartis image"></a>
       </div>
     </div>
     <div class="col-6">
       <div class="projectGrid">
        <h4>Contextual inquiries at Novartis</h4>
         <p>Working with research oncologists to enable better collaboration</p>
-        <p>Read about <a href="/novartis">work #3</a></p>
+        <p>Read about <a href="/novartis-work">work #3</a></p>
       </div>
     </div>
   </div>
@@ -76,14 +76,14 @@
    <div class="row">
     <div class="col-6">
       <div class="projectGrid">
-        <a href="/ultrasound"><img src="assets/images/ultrasound_thumb.jpg" alt="ultrasound image"></a>
+        <a href="/ultrasound-work"><img src="assets/images/ultrasound_thumb.jpg" alt="ultrasound image"></a>
       </div>
     </div>
     <div class="col-6">
       <div class="projectGrid">
        <h4>Portable Ultrasound for Village Midwives</h4>
           <p>Field study research for a low cost medical device in rural Uganda</p>
-          <p>Read about <a href="/ultrasound">work #4</a></p>
+          <p>Read about <a href="/ultrasound-work">work #4</a></p>
       </div>
     </div>
   </div>
