--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -22,31 +22,6 @@
 
   {{ content }}
 
-<div class="grid-display">
-
-  <div class="row projectBody projectNav">
-
-  <div class="col-2">
-    <a href="/customer-journey"><img src="../assets/images/navProjects/ef_journey_1.png" alt="journey navigation link"></a>
-  </div>
-    <div class="col-2">
-    <a href="/price-quote"><img src="../assets/images/navProjects/PQ_2.png" alt="price navigation link"></a>
-  </div>
-
-  <div class="col-2">
-    <a href="/novartis"><img src="../assets/images/navProjects/NOVARTIS_3.png" alt="novartis navigation link"></a>
-  </div>
-  <div class="col-2">
-    <a href="/ultrasound"><img src="../assets/images/navProjects/ultrasound_4.png" alt="ultrasound navigation link"></a>
-  </div>
-     <div class="col-2">
-    <a href="/education-first"><img src="../assets/images/navProjects/EF_finland_5.png" alt="ef navigation link"></a>
-  </div>
-  <div class="col-2">
-    <a href="/dogstay"><img src="../assets/images/navProjects/dogStay_6.png" alt="dogstay navigation link"></a>
-  </div>
-</div>
-</div>
 
  <div class="wrapper">
    {% include footer.html %}
@@ -56,6 +31,9 @@
 {% if jekyll.environment == 'production' %}
 {% include analytics.html %}
 {% endif %}
+
+{% include carousel.html %}
 </body>
+
 
 </html>
