--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -383,6 +383,8 @@ a .publicationCard, .publicationCard:visited {
     margin-left: -38px;
     padding: 15px 20px 4px 0;
     text-align: right;
+    font-family: $font-name;
+    font-size: 16px;
 }
 
 .timelineContent {
@@ -417,11 +419,11 @@ a .publicationCard, .publicationCard:visited {
 .timelineContent p a {
     font-style: italic;
     color: inherit;
-    text-decoration: none
+    text-decoration: none;
 }
 
 .timelineContent p a:hover {
-    text-decoration: underline
+    text-decoration: underline;
 }
 
 .introPara {
