--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -61,8 +61,8 @@ html .page-content-alternative {
     content: '';
     width: 8px;
     height: 8px;
-    border: 2px solid #ccc;
-    background: #fff;
+    border: 2px solid #161616;
+    background: #f1eeec;
     left: 65px;
     top: 24px;
     border-radius: 100%;
@@ -91,11 +91,10 @@ html .page-content-alternative {
         float: left;
         padding: 5px 20px 4px 0;
         text-align: right;
-        font-family: synebold
     }
 
     .timelineContent {
-        border-left: 2px #ccc solid;
+        border-left: 2px #161616 solid;
         padding-left: 20px;
         float: none;
         margin-left: 70px;
@@ -107,8 +106,8 @@ html .page-content-alternative {
         content: '';
         width: 8px;
         height: 8px;
-        border: 2px solid #ccc;
-        background: #fff;
+        border: 2px solid #161616;
+        background: #f1eeec;
         left: 65px;
         top: 24px;
         border-radius: 100%
