--- a/css/main.scss
+++ b/css/main.scss
@@ -102,6 +102,7 @@ $on-laptop:        800px;
 @import
         "syntax-highlighting",
         "simple-grid",
+        "slick",
         "base",
         "layout",
         "responsive"
