--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -75,6 +75,11 @@ html .page-content-alternative {
     padding: 5px 20px 4px 0;
     text-align: right;
 }
+
+.questionProject {
+    font-size: 24px;
+}
+
 }
 
 
