portfolio work changes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -82,7 +82,7 @@
     <div class="col-6">
       <div class="projectGrid">
        <h4>Portable Ultrasound for Village Midwives</h4>
-          <p>Field study research for a low cost medical device in rural Uganda</p>
+          <p>Field study research for the UI of a low cost medical device in rural Uganda</p>
           <p>Read about <a href="/ultrasound-work">work #4</a></p>
       </div>
     </div>
