--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,12 @@
     {% if jekyll.environment == 'production' %}
     {% include analytics.html %}
     {% endif %}
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
   </body>
+
+
 
 </html>
