--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,9 +1,10 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124655799-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-124655799-1');
+$(document).ready(function(){
+  $('.carousel').slick({
+    setting-name: setting-value
+  });
+});
+	
 </script>
