--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -245,8 +245,8 @@
             <h4>And for fun I...</h4>
             <ul>
               <li>Listen to <a href="https://www.mixed-methods.org/">Mixed Methods</a></li>
-              <li>Code this site</li>
-              <li><a href="https://medium.com/@mattihicks">Write</a></li>
+              <li>Write HTML/CSS</li>
+              <li><a href="https://medium.com/@mattihicks">Write articles</a></li>
               <li>Read books (auf Deutsch)</li>
             </ul>
           </div>
