--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -244,9 +244,9 @@
           <div class="col-4">
             <h4>And for fun I...</h4>
             <ul>
+              <li>Write <a href="https://medium.com/@mattihicks">articles</a></li>
               <li>Listen to <a href="https://www.mixed-methods.org/">Mixed Methods</a></li>
-              <li>Write HTML/CSS</li>
-              <li><a href="https://medium.com/@mattihicks">Write articles</a></li>
+              <li>Code side projects</li>
               <li>Read books (auf Deutsch)</li>
             </ul>
           </div>
