fixed remote price CTA

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
       <div class="wrapper">
         <div class="grid-display">
           <div class="row">
-                <div class="col-12 intro">I'm Matti Hicks, a UX researcher with a strong (💪🏼) design background
+                <div class="col-12 intro">I'm Matti Hicks, a UX researcher with a strong (💪) design background
               </div>
           </div>
 
@@ -50,7 +50,7 @@
       </div>
       <div class="col-6">
         <div class="projectGrid">
-        <h4>Surveys and 1:1 interviews for a pricing CTA</h4>
+        <h4>Surveys and remote interviews for trip pricing</h4>
         <p>Applying thick data to understand quantitative success </p>
         <p>Read about <a href="/price-quote">work #2</a></p>
         </div>
