--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@
           </div>
 
           <div class="row">
-                <div class="col-8 introPara"><p>Based in Zürich, I am currently leading research for a global education company. Prior to this, I've worked in research areas such as social technologies, health and medical, and engineering.</p>
+                <div class="col-8 introPara"><p>Based in Zürich, I am currently a User Researcher for a global bank. Prior to this, I've worked in research areas such as international education, social technologies, health and medical, and engineering.</p>
                   <p>Explore my portfolio or <a href="../assets/papers/mhicksCV.pdf">view my CV (pdf)</a></p>
                   <div class="col-2"></div>
               </div>
