--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -247,7 +247,7 @@
               <li>Write <a href="https://medium.com/@mattihicks">articles</a></li>
               <li>Listen to <a href="https://www.mixed-methods.org/">Mixed Methods</a></li>
               <li>Code side projects</li>
-              <li>Read books (auf Deutsch)</li>
+              <li>Read fiction</li>
             </ul>
           </div>
           
