photo update, CV update

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,7 @@
       <div class="row">
       <div class="col-6">
         <div class="projectGrid">
-          <a href="/price-quote"><img src="assets/images/PQ_thumb.jpg" alt="price quote image"></a>
+          <a href="/price-quote"><img src="assets/images/susan_pq copy_Fotor.jpg" alt="price quote image"></a>
         </div>
       </div>
       <div class="col-6">
