--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -244,7 +244,7 @@
           <div class="col-4">
             <h4>And for fun I...</h4>
             <ul>
-              <li>Write <a href="https://medium.com/@mattihicks">articles</a></li>
+              <li>Write <a href="https://medium.com/@mattihicks">articles</a> and stories</li>
               <li>Listen to <a href="https://www.mixed-methods.org/">Mixed Methods</a></li>
               <li>Code side projects</li>
               <li>Read fiction</li>
